# collision-detection

./: .gitignore  CMakeLists.txt  IDENTIFICATION.txt  README.txt  demo  presentation.url
app/: detect_collision.cpp  generate_shapes_3d.cpp  test_shapes_2d.cpp  test_shapes_3d.cpp
include/ra/: helpers.hpp  shape.hpp
shapes_2d/: collision_1.off  collision_2.off  no_collision_1.off  no_collision_2.off
shapes_3d/: collision_1.off  collision_2.off  no_collision_1.off  no_collision_2.off
test_shapes_3d/: cuboctahedron.off
